Step4.5: MuSF validated. Changed musf_evaluator to separate mu1 and mu2 instead of events.Muon. This  is better design choice since we want to strictly look at efficiencies for two leading muons only.

--- a/stage1_runner.ipynb
+++ b/stage1_runner.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "dfb8f786-37c3-428a-b1dd-d71d5a58758e",
    "metadata": {
     "editable": true,
@@ -143,26 +143,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "self.zpt_path: zpt_weights/2017_value\n",
       "Local scale Client created\n",
-      "  0%|                                                     | 0/1 [00:00<?, ?it/s]smaller_files: [{'root://eos.cms.rcac.purdue.edu:1094///store/mc/RunIISummer20UL18NanoAODv9/GluGluHToMuMu_M125_TuneCP5_13TeV-powheg-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2810000/C4DAB63C-E2A1-A541-93A8-3F46315E362C.root': {'object_path': 'Events', 'steps': [[0, 9990]], 'uuid': 'b16b5dea-fbcd-11ed-bae7-a2a0b8bcbeef'}}]\n",
+      "  0%|                                                     | 0/1 [00:00<?, ?it/s]smaller_files: [{'root://eos.cms.rcac.purdue.edu:1094///store/mc/RunIISummer20UL18NanoAODv9/VBFHToMuMu_M125_TuneCP5_withDipoleRecoil_13TeV-powheg-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2820000/083C985C-C112-3B46-A053-D72C1F83309D.root': {'object_path': 'Events', 'steps': [[0, 10044]], 'uuid': 'b16b5dea-fbcd-11ed-bae7-a2a0b8bcbeef'}}]\n",
       "\n",
       "  0%|                                                     | 0/1 [00:00<?, ?it/s]\u001b[Adoing fsr!\n",
       "doing geofit\n",
-      "sumWeights: 214395.9242362976\n",
-      "events b4 filter length: 9990\n",
-      "events after filter length: 6271\n",
-      "cross_section: 0.01057\n",
+      "/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/awkward/_nplikes/array_module.py:245: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return impl(*broadcasted_args, **(kwargs or {}))\n",
+      "sumWeights: 38767.655119895935\n",
+      "events b4 filter length: 10044\n",
+      "doing musf!\n",
+      "events after filter length: 6486\n",
+      "cross_section: 0.0008210722\n",
       "integrated_lumi: 59970.0\n",
-      "weight statistics: {'genWeight': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'genWeight_normalization': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'xsec': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'lumi': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'pu': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'l1prefiring': {'sumw': dask.awkward<sum, type=Scalar, dtype=float32>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float32>, 'minw': dask.awkward<min, type=Scalar, dtype=float32>, 'maxw': dask.awkward<max, type=Scalar, dtype=float32>}}\n",
-      "weights: 6271\n",
-      "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/ggh_powheg/0\n",
+      "weight statistics: {'genWeight': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'genWeight_normalization': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'xsec': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'lumi': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'pu': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'l1prefiring': {'sumw': dask.awkward<sum, type=Scalar, dtype=float32>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float32>, 'minw': dask.awkward<min, type=Scalar, dtype=float32>, 'maxw': dask.awkward<max, type=Scalar, dtype=float32>}, 'muID': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'muIso': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'muTrig': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}}\n",
+      "weights: 6486\n",
+      "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/vbf_powheg/0\n",
       "len(filelist): 1\n",
-      "nnlops filelist: ['/depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/ggh_powheg/0/nnlops/wgt.parquet']\n",
-      "nnlops_wgt: [1.03, 1.14, 1.13, 0.962, 0.968, 0.928, ..., 0.932, 0.945, 0.942, 0.972, 1.12]\n",
       "\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:32<00:00, 32.16s/it]\u001b[A\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:32<00:00, 32.16s/it]\u001b[A\n",
-      "2024-03-10 22:01:10,463 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
+      "100%|█████████████████████████████████████████████| 1/1 [00:27<00:00, 27.79s/it]\u001b[A\n",
+      "100%|█████████████████████████████████████████████| 1/1 [00:27<00:00, 27.80s/it]\u001b[A\n",
+      "2024-03-11 01:14:24,367 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
       "Traceback (most recent call last):\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/distributed/sizeof.py\", line 17, in safe_sizeof\n",
       "    return sizeof(obj)\n",
@@ -1287,7 +1289,7 @@
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/sizeof.py\", line 59, in sizeof_python_collection\n",
       "    return sys.getsizeof(seq) + sum(map(sizeof, seq))\n",
       "RecursionError: maximum recursion depth exceeded\n",
-      "Finished everything in 36.894 s.\n",
+      "Finished everything in 32.112 s.\n",
       "\u001b[0m\u001b[0m"
      ]
     }
