--- a/stage1_runner.ipynb
+++ b/stage1_runner.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "dfb8f786-37c3-428a-b1dd-d71d5a58758e",
    "metadata": {
     "editable": true,
@@ -143,7 +143,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "self.zpt_path: zpt_weights/2017_value\n",
       "Local scale Client created\n",
       "  0%|                                                     | 0/1 [00:00<?, ?it/s]smaller_files: [{'root://eos.cms.rcac.purdue.edu:1094///store/mc/RunIISummer20UL18NanoAODv9/VBFHToMuMu_M125_TuneCP5_withDipoleRecoil_13TeV-powheg-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2820000/083C985C-C112-3B46-A053-D72C1F83309D.root': {'object_path': 'Events', 'steps': [[0, 10044]], 'uuid': 'b16b5dea-fbcd-11ed-bae7-a2a0b8bcbeef'}}]\n",
       "\n",
@@ -154,17 +153,14 @@
       "sumWeights: 38767.655119895935\n",
       "events b4 filter length: 10044\n",
       "doing musf!\n",
-      "events after filter length: 6486\n",
-      "cross_section: 0.0008210722\n",
-      "integrated_lumi: 59970.0\n",
-      "weight statistics: {'genWeight': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'genWeight_normalization': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'xsec': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'lumi': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'pu': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'l1prefiring': {'sumw': dask.awkward<sum, type=Scalar, dtype=float32>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float32>, 'minw': dask.awkward<min, type=Scalar, dtype=float32>, 'maxw': dask.awkward<max, type=Scalar, dtype=float32>}, 'muID': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'muIso': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'muTrig': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}}\n",
-      "weights: 6486\n",
-      "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/vbf_powheg/0\n",
-      "len(filelist): 1\n",
+      "doing LHE!\n",
+      "lhe_ren: {'up': dask.awkward<where, npartitions=1>, 'down': dask.awkward<where, npartitions=1>}\n",
+      "lhe_fac: {'up': dask.awkward<where, npartitions=1>, 'down': dask.awkward<where, npartitions=1>}\n",
+      "doing THU!\n",
+      "doing pdf!\n",
       "\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:27<00:00, 27.79s/it]\u001b[A\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:27<00:00, 27.80s/it]\u001b[A\n",
-      "2024-03-11 01:14:24,367 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
+      "  0%|                                                     | 0/1 [00:34<?, ?it/s]\u001b[A\n",
+      "2024-03-11 20:22:21,065 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
       "Traceback (most recent call last):\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/distributed/sizeof.py\", line 17, in safe_sizeof\n",
       "    return sizeof(obj)\n",
@@ -1289,7 +1285,47 @@
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/sizeof.py\", line 59, in sizeof_python_collection\n",
       "    return sys.getsizeof(seq) + sum(map(sizeof, seq))\n",
       "RecursionError: maximum recursion depth exceeded\n",
-      "Finished everything in 32.112 s.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/awkward/_dispatch.py\", line 51, in dispatch\n",
+      "    result = custom_impl(dispatch, array_likes, args, kwargs)\n",
+      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask_awkward/lib/core.py\", line 1614, in __awkward_function__\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask_awkward/lib/reducers.py\", line 498, in std\n",
+      "    raise DaskAwkwardNotImplemented(\n",
+      "dask_awkward.utils.DaskAwkwardNotImplemented: axis=0 is not supported for this array yet.\n",
+      "\n",
+      "If you would like this unsupported call to be supported by\n",
+      "dask-awkward please open an issue at:\n",
+      "https://github.com/dask-contrib/dask-awkward.\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/depot/cms/private/users/yun79/valerie/fork/copperheadV2/run_stage1.py\", line 384, in <module>\n",
+      "    dataset_loop(coffea_processor, smaller_sample, file_idx=idx, test=test_mode, save_path=total_save_path)\n",
+      "  File \"/depot/cms/private/users/yun79/valerie/fork/copperheadV2/run_stage1.py\", line 62, in dataset_loop\n",
+      "    out_collections = processor.process(events)\n",
+      "  File \"/depot/cms/private/users/yun79/valerie/fork/copperheadV2/copperhead_processor.py\", line 761, in process\n",
+      "    pdf_vars = add_pdf_variations(events, self.weight_collection, self.config, dataset)\n",
+      "  File \"/depot/cms/private/users/yun79/valerie/fork/copperheadV2/corrections/evaluator.py\", line 894, in add_pdf_variations\n",
+      "    pdf_std = ak.std(pdf_wgts, axis=0)\n",
+      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/awkward/_dispatch.py\", line 38, in dispatch\n",
+      "    with OperationErrorContext(name, args, kwargs):\n",
+      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/awkward/_errors.py\", line 85, in __exit__\n",
+      "    self.handle_exception(exception_type, exception_value)\n",
+      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/awkward/_errors.py\", line 95, in handle_exception\n",
+      "    raise self.decorate_exception(cls, exception)\n",
+      "dask_awkward.utils.DaskAwkwardNotImplemented: axis=0 is not supported for this array yet.\n",
+      "\n",
+      "If you would like this unsupported call to be supported by\n",
+      "dask-awkward please open an issue at:\n",
+      "https://github.com/dask-contrib/dask-awkward.\n",
+      "\n",
+      "See if this has been reported at https://github.com/scikit-hep/awkward/issues\n",
+      "\n",
+      "If you would like this unsupported call to be supported by\n",
+      "dask-awkward please open an issue at:\n",
+      "https://github.com/dask-contrib/dask-awkward.\n",
       "\u001b[0m\u001b[0m"
      ]
     }
