--- a/stage1_runner.ipynb
+++ b/stage1_runner.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "dfb8f786-37c3-428a-b1dd-d71d5a58758e",
    "metadata": {
     "editable": true,
@@ -156,7 +156,8 @@
       "doing musf!\n",
       "doing LHE!\n",
       "doing pdf!\n",
-      "jet_selection: [[False, True, False, True], [True, ...], ..., [False, False, True, False]]\n",
+      "njets passing jet_selection: 11805\n",
+      "number of events passing jet selection: 6143\n",
       "jet_argmax[jet_argmax_not_leading] : [1, 1, 1]\n",
       "jets.pt[jet_argmax_not_leading] : [[34.7, 34.7], [113, 113, 28.5], [32.9, 32.9]]\n",
       "jets.pt_raw[jet_argmax_not_leading] : [[35.7, 42.1], [100, 99.2, 29.3], [41.2, 30.1]]\n",
@@ -169,9 +170,9 @@
       "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/vbf_powheg/0\n",
       "len(filelist): 1\n",
       "\n",
-      "100%|█████████████████████████████████████████████| 1/1 [01:21<00:00, 81.38s/it]\u001b[A\n",
-      "100%|█████████████████████████████████████████████| 1/1 [01:21<00:00, 81.38s/it]\u001b[A\n",
-      "2024-03-12 01:38:16,596 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
+      "100%|█████████████████████████████████████████████| 1/1 [01:26<00:00, 86.59s/it]\u001b[A\n",
+      "100%|█████████████████████████████████████████████| 1/1 [01:26<00:00, 86.59s/it]\u001b[A\n",
+      "2024-03-12 02:20:52,700 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
       "Traceback (most recent call last):\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/distributed/sizeof.py\", line 17, in safe_sizeof\n",
       "    return sizeof(obj)\n",
@@ -1296,7 +1297,7 @@
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/sizeof.py\", line 59, in sizeof_python_collection\n",
       "    return sys.getsizeof(seq) + sum(map(sizeof, seq))\n",
       "RecursionError: maximum recursion depth exceeded\n",
-      "Finished everything in 85.979 s.\n",
+      "Finished everything in 91.28 s.\n",
       "\u001b[0m\u001b[0m"
      ]
     }
