Update the corrected weight printing for ggh (forgot to add nnlops, which I already did in the plottting cell)

--- a/quick_tests/quick_validation_comparison.ipynb
+++ b/quick_tests/quick_validation_comparison.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "85a7af5a-ff70-4fa9-86de-03b2f48d853c",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "4a280249-27d1-48aa-8ef2-dc73f902385d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "28ef09fe-19ff-420f-a53f-c1b586a2b853",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0574, 0.0775, 0.0682, 0.0632, 0.0644, ..., 0.0687, 0.064, 0.0643, 0.0679]\n",
+      "ggh in sample!\n",
+      "[0.0589, 0.0883, 0.077, 0.0608, 0.0623, ..., 0.0649, 0.0603, 0.0625, 0.0762]\n",
       "6271\n",
       "entry\n",
       "1       0.058933\n",
@@ -78,17 +79,22 @@
       "9988    0.076242\n",
       "Name: weights, Length: 6271, dtype: float64\n",
       "(6271,)\n",
-      "0.139272299596885\n",
-      "-0.06949908612391463\n",
+      "0.22013237554671772\n",
+      "-0.07768830159189902\n",
       "0.22013238044627953\n",
       "-0.07768830921085104\n",
-      "5.880397406229628\n",
-      "0.0831541146105495\n"
+      "0.00162196233365015\n",
+      "3.2252075593920005e-06\n"
      ]
     }
    ],
    "source": [
     "weights_new = df_new[\"weights\"].compute()\n",
+    "if \"ggh\" in sample:\n",
+    "    print(\"ggh in sample!\")\n",
+    "    nnlops_full_load_path = f'/depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/{sample}/0/nnlops/wgt.parquet'\n",
+    "    nnlops_wgts = ak.from_parquet(nnlops_full_load_path)[\"nnlops_wgt\"]\n",
+    "    weights_new = weights_new*nnlops_wgts\n",
     "print(weights_new)\n",
     "print(ak.num(weights_new, axis=0))\n",
     "weights_old = df_old[\"weights\"].compute()\n",
@@ -1066,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "e18665aa-4659-4ca2-afac-f3912093c4d1",
    "metadata": {},
    "outputs": [],
@@ -1081,9 +1087,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "6680dea8-582c-447a-871e-13091c4c786b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1256,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "47661fb9-4613-4840-ba7e-4efbe0ff2baf",
    "metadata": {
     "scrolled": true
