retested VBF and data A to make sure I didn't mess up while tyring to debug DY

--- a/stage1_runner.ipynb
+++ b/stage1_runner.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "dfb8f786-37c3-428a-b1dd-d71d5a58758e",
    "metadata": {
     "editable": true,
@@ -197,28 +197,20 @@
      "text": [
       "Local scale Client created\n",
       "  0%|                                                     | 0/1 [00:00<?, ?it/s]\n",
-      "  0%|                                                     | 0/1 [00:00<?, ?it/s]\u001b[A240313 18:36:26 72357 secgsi_Init: Secgsi: ErrError: CA directory non existing: /cvmfs/cms.cern.ch/grid/etc/grid-security/certificates\n",
-      "240313 18:36:26 72357 secgsi_Init: Secgsi: ErrError: CRL directory non existing:: /cvmfs/cms.cern.ch/grid/etc/grid-security/certificates\n",
-      "240313 18:36:29 72374 secgsi_Init: Secgsi: ErrError: CA directory non existing: /cvmfs/cms.cern.ch/grid/etc/grid-security/certificates\n",
-      "240313 18:36:29 72374 secgsi_Init: Secgsi: ErrError: CRL directory non existing:: /cvmfs/cms.cern.ch/grid/etc/grid-security/certificates\n",
-      "doing fsr!\n",
+      "  0%|                                                     | 0/1 [00:00<?, ?it/s]\u001b[Adoing fsr!\n",
+      "total nmuons applied with fsrPhotons: 124\n",
+      "total nmuons: 12709\n",
       "doing geofit\n",
       "do jec!\n",
-      "doing zpt weight!\n",
-      "doing musf!\n",
-      "doing LHE!\n",
-      "doing pdf!\n",
-      "events after filter length: 13820\n",
-      "cross_section: 254.2\n",
-      "integrated_lumi: 59970.0\n",
-      "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'pu', 'l1prefiring', 'zpt_wgt', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms'])\n",
-      "weights: 13820\n",
-      "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/dy_M-100To200/0\n",
+      "events after filter length: 415\n",
+      "weight statistics: dict_keys(['ones'])\n",
+      "weights: 415\n",
+      "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/data_A/0\n",
       "len(filelist): 1\n",
       "\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:59<00:00, 59.81s/it]\u001b[A\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:59<00:00, 59.82s/it]\u001b[A\n",
-      "2024-03-13 18:37:25,581 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
+      "100%|█████████████████████████████████████████████| 1/1 [01:06<00:00, 66.99s/it]\u001b[A\n",
+      "100%|█████████████████████████████████████████████| 1/1 [01:06<00:00, 66.99s/it]\u001b[A\n",
+      "2024-03-13 23:43:16,842 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
       "Traceback (most recent call last):\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/distributed/sizeof.py\", line 17, in safe_sizeof\n",
       "    return sizeof(obj)\n",
@@ -236,8 +228,8 @@
       "    + sizeof(list(d.values()))\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/utils.py\", line 767, in __call__\n",
       "    return meth(arg, *args, **kwargs)\n",
-      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/sizeof.py\", line 59, in sizeof_python_collection\n",
-      "    return sys.getsizeof(seq) + sum(map(sizeof, seq))\n",
+      "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/sizeof.py\", line 56, in sizeof_python_collection\n",
+      "    num_items / num_samples * sum(map(sizeof, samples))\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/utils.py\", line 767, in __call__\n",
       "    return meth(arg, *args, **kwargs)\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/sizeof.py\", line 96, in sizeof_python_dict\n",
@@ -1343,7 +1335,7 @@
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/sizeof.py\", line 59, in sizeof_python_collection\n",
       "    return sys.getsizeof(seq) + sum(map(sizeof, seq))\n",
       "RecursionError: maximum recursion depth exceeded\n",
-      "Finished everything in 64.12 s.\n",
+      "Finished everything in 73.377 s.\n",
       "\u001b[0m\u001b[0m"
      ]
     }
