tested and validated nnlops + btag nominal weights for ggH full sample of 999000 events

--- a/stage1_runner.ipynb
+++ b/stage1_runner.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "id": "849272f4-df13-4da6-97eb-5c026e926024",
    "metadata": {
     "scrolled": true
@@ -38,30 +38,21 @@
      "text": [
       "/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 32961 instead\n",
+      "Hosting the HTTP server on port 45955 instead\n",
       "  warnings.warn(\n",
       "Local scale Client created\n",
-      "new dataset: dict_keys(['st_tw_top', 'st_tw_antitop', 'ww_2l2nu', 'wz_3lnu', 'wz_2l2q', 'wz_1l1nu2q', 'zz', 'ewk_lljj_mll50_mjj120'])\n",
-      "  0%|                                                     | 0/8 [00:00<?, ?it/s]sample_name: st_tw_top\n",
-      "len(fnames): 15\n",
-      " 12%|█████▋                                       | 1/8 [00:07<00:50,  7.23s/it]sample_name: st_tw_antitop\n",
-      "len(fnames): 16\n",
-      " 25%|███████████▎                                 | 2/8 [00:13<00:38,  6.40s/it]sample_name: ww_2l2nu\n",
-      "len(fnames): 37\n",
-      " 38%|████████████████▉                            | 3/8 [00:21<00:36,  7.36s/it]sample_name: wz_3lnu\n",
-      "len(fnames): 18\n",
-      " 50%|██████████████████████▌                      | 4/8 [00:26<00:25,  6.47s/it]sample_name: wz_2l2q\n",
-      "len(fnames): 22\n",
-      " 62%|████████████████████████████▏                | 5/8 [00:36<00:23,  7.73s/it]sample_name: wz_1l1nu2q\n",
-      "len(fnames): 20\n",
-      " 75%|█████████████████████████████████▊           | 6/8 [00:48<00:18,  9.02s/it]sample_name: zz\n",
-      "len(fnames): 6\n",
-      " 88%|███████████████████████████████████████▍     | 7/8 [00:51<00:07,  7.13s/it]sample_name: ewk_lljj_mll50_mjj120\n",
-      "len(fnames): 10\n",
-      "100%|█████████████████████████████████████████████| 8/8 [00:55<00:00,  6.90s/it]\n",
-      "Finished everything in 57.492 s.\n",
-      "Total Events in files 89467816.\n",
-      "2024-03-18 16:53:03,894 - distributed.deploy.adaptive_core - INFO - Adaptive stop\n"
+      "new dataset: dict_keys(['dy_M-100To200'])\n",
+      "  0%|                                                     | 0/1 [00:00<?, ?it/s]sample_name: dy_M-100To200\n",
+      "len(fnames): 128\n",
+      "2024-03-27 14:15:09,367 - distributed.core - INFO - Connection to tcp://127.0.0.1:37103 has been closed.\n",
+      "2024-03-27 14:15:09,367 - distributed.core - INFO - Connection to tcp://127.0.0.1:37103 has been closed.\n",
+      "2024-03-27 14:15:11,056 - distributed.core - INFO - Connection to tcp://127.0.0.1:37103 has been closed.\n",
+      "2024-03-27 14:15:12,052 - distributed.core - INFO - Connection to tcp://127.0.0.1:37103 has been closed.\n",
+      "2024-03-27 14:15:12,059 - distributed.core - INFO - Connection to tcp://127.0.0.1:37103 has been closed.\n",
+      "100%|█████████████████████████████████████████████| 1/1 [00:31<00:00, 31.71s/it]\n",
+      "Finished everything in 33.887 s.\n",
+      "Total Events in files 219326954.\n",
+      "2024-03-27 14:15:14,120 - distributed.deploy.adaptive_core - INFO - Adaptive stop\n"
      ]
     }
    ],
@@ -78,7 +69,7 @@
     "data_l = []\n",
     "# bkg_l = ['DY', 'TT',]\n",
     "# sig_l = ['ggH', 'VBF']\n",
-    "bkg_l = ['ST', 'VV', 'EWK']\n",
+    "bkg_l = ['DY',]\n",
     "sig_l = []\n",
     "! python run_prestage.py --chunksize 100000 --year 2018  --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)}\n",
     "# ! python run_prestage.py --chunksize 5000 --year 2018  --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)}"
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 160,
    "id": "dfb8f786-37c3-428a-b1dd-d71d5a58758e",
    "metadata": {
     "editable": true,
@@ -132,21 +123,27 @@
      "text": [
       "  0%|                                                     | 0/1 [00:00<?, ?it/s]\n",
       "  0%|                                                     | 0/1 [00:00<?, ?it/s]\u001b[Adoing fsr!\n",
+      "type(pt): ?? * var * ?float32\n",
+      "total nmuons applied with fsrPhotons: dask.awkward<sum, type=Scalar, dtype=int64>\n",
+      "type(eta): ?? * var * ?float32\n",
+      "type(phi): ?? * var * ?float32\n",
+      "type(mass): ?? * var * ?float32\n",
       "doing geofit\n",
+      "sumWeights: 21450440.223884583\n",
       "do jec!\n",
-      "doing zpt weight!\n",
+      "doing NNLOPS!\n",
       "doing musf!\n",
       "doing LHE!\n",
       "doing pdf!\n",
-      "events after filter length: 41218\n",
-      "cross_section: 254.2\n",
+      "btag_json: <correctionlib.highlevel.CorrectionSet object at 0x7fb06534cdf0>\n",
+      "cross_section: 0.01057\n",
       "integrated_lumi: 59970.0\n",
-      "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'pu', 'l1prefiring', 'zpt_wgt', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms'])\n",
-      "weights: 41218\n",
-      "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/dy_M-100To200/0\n",
-      "len(filelist): 0\n",
-      "Finished file_idx 0 in 99.989 s.#########] | 100% Completed |  0.0s\u001b[2K\n",
-      "2024-03-19 15:08:06,998 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
+      "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'l1prefiring', 'nnlops', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms'])\n",
+      "adding btag wgts!\n",
+      "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/ggh_powheg/0\n",
+      "len(filelist): 1\n",
+      "Finished file_idx 0 in 248.807 s.\n",
+      "2024-03-29 22:51:37,831 - distributed.sizeof - WARNING - Sizeof calculation failed. Defaulting to -1 B\n",
       "Traceback (most recent call last):\n",
       "  File \"/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/distributed/sizeof.py\", line 17, in safe_sizeof\n",
       "    return sizeof(obj)\n",
@@ -1272,10 +1269,10 @@
       "    return sys.getsizeof(seq) + sum(map(sizeof, seq))\n",
       "RecursionError: maximum recursion depth exceeded\n",
       "\u001b[0m\n",
-      "100%|████████████████████████████████████████████| 1/1 [01:45<00:00, 105.29s/it]\u001b[A\n",
-      "                                                                                \u001b[AFinished sample dy_M-100To200 in 105.294 s.\n",
-      "100%|████████████████████████████████████████████| 1/1 [01:45<00:00, 105.29s/it]\n",
-      "Finished everything in 105.407 s.\n",
+      "100%|████████████████████████████████████████████| 1/1 [04:15<00:00, 255.69s/it]\u001b[A\n",
+      "                                                                                \u001b[AFinished sample ggh_powheg in 255.692 s.\n",
+      "100%|████████████████████████████████████████████| 1/1 [04:15<00:00, 255.69s/it]\n",
+      "Finished everything in 255.805 s.\n",
       "\u001b[0m"
      ]
     }
@@ -1286,9 +1283,12 @@
     "# ! python -W ignore run_stage1.py  --save_path \"/depot/cms/users/yun79/results/stage1/test_full/\" \n",
     "# ! nohup python -W ignore run_stage1.py  --save_path \"/depot/cms/users/yun79/results/stage1/test_full3/\"  &> output.log\n",
     "# ! python -W ignore run_stage1.py -y 2018 --save_path  \"/depot/cms/users/yun79/results/stage1/test_full3\"\n",
-    "! python -W ignore run_stage1.py -y 2018 --save_path  \"/depot/cms/users/yun79/results/stage1/test_full2\"\n",
+    "! python -W ignore run_stage1.py -y 2018 --save_path  \"/depot/cms/users/yun79/results/stage1/test_full2\" \n",
+    "# ! python -W ignore run_stage1.py -y 2018 --save_path  \"/depot/cms/users/yun79/results/stage1/manyBig\"\n",
+    "# ! python -W ignore run_stage1.py -y 2018 --save_path  \"/depot/cms/users/yun79/results/stage1/singleBig\"\n",
+    "\n",
     "# ! nohup python -W ignore run_stage1.py -y 2018 --use_gateway --save_path  \"/depot/cms/users/yun79/results/stage1/test_validation_bigV2\" \n",
-    "# ! nohup python -W ignore run_stage1.py -y 2018 --save_path  \"/depot/cms/users/yun79/results/stage1/test_validation_bigV2\" > output.log"
+    "# ! nohup python -W ignore run_stage1.py -y 2018 --save_path  \"/depot/cms/users/yun79/results/stage1/test_validation_bigV2\" > output.log\n"
    ]
   },
   {
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "317ff900-ab55-4030-bd87-e979394e50e4",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1384,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f0_0005  f0_1  f0_3  f1_0\n"
+      "f0_0005  f0_001  f0_1  f0_3  f1_0\n"
      ]
     }
    ],
@@ -1395,30 +1395,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "3b87918e-51cc-40f2-8422-8699d427d901",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.3.33'"
+       "'2024.3.0'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import mplhep as hep\n",
-    "hep.__version__"
+    "import coffea\n",
+    "coffea.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b4e9a823-14d2-402f-abae-608131870ec2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "! ls /depot/cms/users/yun79/results/stage1/test_validation_bigV2_3/2018/f1_0/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4e9a823-14d2-402f-abae-608131870ec2",
+   "id": "a76f9057-3002-49ed-b376-39da610fffc4",
    "metadata": {},
    "outputs": [],
    "source": []
