uploading changes I made from Valerie's Run3 change

--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -7,13 +7,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from dask_gateway import Gateway\n",
-    "gateway = Gateway()"
+    "# gateway = Gateway()\n",
+    "gateway = Gateway(\n",
+    "    \"http://dask-gateway-k8s.geddes.rcac.purdue.edu/\",\n",
+    "    proxy_address=\"traefik-dask-gateway-k8s.cms.geddes.rcac.purdue.edu:8786\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -25,17 +30,13 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div style='background-color: #f2f2f2; display: inline-block; padding: 10px; border: 1px solid #999999;'>\n",
-       "  <h3>GatewayCluster</h3>\n",
-       "  <ul>\n",
-       "    <li><b>Name: </b>688817c899904138bd35bb9eb0296a18\n",
-       "    <li><b>Dashboard: </b><a href='http://dask-gateway.geddes.rcac.purdue.edu/clusters/688817c899904138bd35bb9eb0296a18/status' target='_blank'>http://dask-gateway.geddes.rcac.purdue.edu/clusters/688817c899904138bd35bb9eb0296a18/status</a>\n",
-       "  </ul>\n",
-       "</div>\n"
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce803b1192b644b087e226ff0ce736aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "GatewayCluster<688817c899904138bd35bb9eb0296a18, status=running>"
+       "VBox(children=(HTML(value='<h2>GatewayCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n<style scoped>\\n    …"
       ]
      },
      "metadata": {},
@@ -43,25 +44,36 @@
     }
    ],
    "source": [
+    "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/users/yun79/x509up_u383571\"\n",
+    "os.environ[\"PYTHONPATH\"] += \":/depot/cms/private/users/yun79/valerie/fork/copperheadV2\"\n",
+    "\n",
     "cluster = gateway.new_cluster(\n",
-    "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
-    "    conda_env = \"/depot/cms/users/yun79/conda_envs/copperheadV2\",\n",
-    "    queue = \"cms\",\n",
+    "    conda_env = \"/depot/cms/kernels/coffea2024\",\n",
+    "    # conda_env = \"/depot/cms/users/yun79/conda_envs/copperheadV2\",\n",
+    "    # queue = \"cms\",\n",
     "    worker_cores = 1,\n",
-    "    worker_memory = 3,\n",
-    "    env = {\n",
-    "        \"WORKDIR\": \"/depot/cms/private/users/yun79/valerie/fork/copperheadV2\",\n",
-    "        \"X509_USER_PROXY\": \"/depot/cms/users/yun79/x509up_u383571\"\n",
-    "    },\n",
+    "    # worker_threads=1,\n",
+    "    worker_memory = 1,\n",
+    "    # worker_memory = 8,\n",
+    "    # nthreads=1,\n",
+    "    env = dict(os.environ),\n",
+    "    env_propagate = \"X509_USER_PROXY, PYTHONPATH\"\n",
+    "    #env = {\n",
+    "    #    \"WORKDIR\": \"/depot/cms/private/users/yun79/valerie/fork/copperheadV2\",\n",
+    "    #    \"X509_USER_PROXY\": \"/depot/cms/users/yun79/x509up_u383571\"\n",
+    "    #},\n",
     "    # cluster_start_timeout = 21600,\n",
     ")\n",
-    "cluster.scale(80) # or do .adapt\n",
+    "# cluster.adapt(minimum=4) # or do .adapt\n",
+    "# cluster.adapt(minimum=40, maximum=100) # or do .adapt\n",
+    "# cluster.scale(70) \n",
+    "cluster.scale(1) \n",
     "cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7509afd5-e613-4dad-99f0-ebcda0453090",
    "metadata": {},
    "outputs": [],
@@ -78,24 +90,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f04bf8e2-e9bd-4b41-9c5e-0b45b0e99f0c",
+   "execution_count": null,
+   "id": "7824bd5c-1ad4-4075-b802-9691e0bd9040",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cluster.cluster_options()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "61b1a67a-53d2-4837-b5c4-2fd124dd128f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options = gateway.cluster_options()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add5c117-7590-4546-8fe6-239cab13dd36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# options.worker_cores\n",
+    "options.fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e627d976-e8ae-4d2f-974a-757ea14acf87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! squeue -u yun79"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7824bd5c-1ad4-4075-b802-9691e0bd9040",
+   "id": "3d015374-9431-4718-9eb3-a37a00bb367f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "':/depot/cms/purdue-af/lhapdf/lib/python3.10/site-packages'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b1a67a-53d2-4837-b5c4-2fd124dd128f",
+   "id": "bf00be45-2c6c-4572-8223-3fb8b7d6da5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -103,9 +159,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:copperheadV2]",
+   "display_name": "Python [conda env:coffea2024]",
    "language": "python",
-   "name": "conda-env-copperheadV2-py"
+   "name": "conda-env-coffea2024-py"
   },
   "language_info": {
    "codemirror_mode": {
