add XRD_REQUESTTIMEOUT value to increase the value to a much higher number in general. Otherwise, xrootd takes too long to fetch the root file, and gives out an OSError

--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -29,9 +29,17 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask_gateway/client.py:675: GatewayWarning: Scale request of 100 workers would exceed resource limit of 50 workers. Scaling to 50 instead.\n",
+      "  warnings.warn(GatewayWarning(msg[\"msg\"]))\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce803b1192b644b087e226ff0ce736aa",
+       "model_id": "6a49996329dc4259849dfd86654ad3db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,29 +54,37 @@
    "source": [
     "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/users/yun79/x509up_u383571\"\n",
     "os.environ[\"PYTHONPATH\"] += \":/depot/cms/private/users/yun79/valerie/fork/copperheadV2\"\n",
-    "\n",
+    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\"\n",
     "cluster = gateway.new_cluster(\n",
     "    conda_env = \"/depot/cms/kernels/coffea2024\",\n",
-    "    # conda_env = \"/depot/cms/users/yun79/conda_envs/copperheadV2\",\n",
-    "    # queue = \"cms\",\n",
-    "    worker_cores = 1,\n",
-    "    # worker_threads=1,\n",
-    "    worker_memory = 1,\n",
-    "    # worker_memory = 8,\n",
-    "    # nthreads=1,\n",
+    "    worker_cores = 2,#1\n",
+    "    worker_memory = 8,\n",
     "    env = dict(os.environ),\n",
-    "    env_propagate = \"X509_USER_PROXY, PYTHONPATH\"\n",
-    "    #env = {\n",
-    "    #    \"WORKDIR\": \"/depot/cms/private/users/yun79/valerie/fork/copperheadV2\",\n",
-    "    #    \"X509_USER_PROXY\": \"/depot/cms/users/yun79/x509up_u383571\"\n",
-    "    #},\n",
-    "    # cluster_start_timeout = 21600,\n",
     ")\n",
-    "# cluster.adapt(minimum=4) # or do .adapt\n",
-    "# cluster.adapt(minimum=40, maximum=100) # or do .adapt\n",
-    "# cluster.scale(70) \n",
-    "cluster.scale(1) \n",
+    "\n",
+    "cluster.scale(100) \n",
     "cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2ff0a848-13af-4176-8b20-fd6c4e53c3f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/depot/cms/private/users/yun79/valerie/fork/copperheadV2'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ['PWD']"
    ]
   },
   {
@@ -86,16 +102,6 @@
     "\n",
     "for cluster_info in gateway.list_clusters():\n",
     "    gateway.connect(cluster_info.name).shutdown()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7824bd5c-1ad4-4075-b802-9691e0bd9040",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.cluster_options()"
    ]
   },
   {
